# 2024-2025-Robot-Code

./: .gitignore  .gitmodules  README.md
Docs/: read_me_template.md
ROS/: Dockerfile  run_pkg.sh
ROS/Auto_Package/: CMakeLists.txt  package.xml
ROS/MCU_Package/: CMakeLists.txt  README.md  package.xml
ROS/MCU_Package_Old/: CMakeLists.txt
ROS/NON_ROI_ROS/interfaces/msg/: Buttons.msg
ROS/NON_ROI_ROS/queue_package/: package.xml  setup.py
ROS/NON_ROI_ROS/queue_package/launch/: macros_in_que.xml  queue_package_launch.xml  stage_one_queue_package.xml
ROS/NON_ROI_ROS/queue_package/queue_package/: control_node.py  mux_control.py
ROS/NON_ROI_ROS/rs_package/rs_package/: skid_steer.py
ROS/Que_Package/: CMakeLists.txt  README.md  control_node.py  feedback_processor  fifo_queue.py  mux_control.py  package.xml  priority_node.cpp  request_handler  setup.cfg  setup.py
ROS/RS_Package/: CMakeLists.txt  README.md  package.xml  requirements.txt  run.sh  run_turtlesim.sh  setup.py
ROS/RS_Package/RS_Package/: __init__.py
ROS/RS_Package/config/: ps3.config.yaml
ROS/RS_Package/launch/: controller_turtle.launch.py  rs_launch.py
ROS/interfaces/: CMakeLists.txt
ROS/interfaces/msg/: Buttons.msg  TwistPlus.msg
ROS/mcu_package/: package.xml
ROS/queue_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ROS/queue_package/launch/: queue_package_launch.xml
ROS/queue_package/queue_package/: control_node.py  fifo_queue.py  macro_conflicts.py  macro_lut.py  mux_control.py  request_handler.py
ROS/rs_package/: CMakeLists.txt  README.md  package.xml  run.sh  setup.py
ROS/rs_package/launch/: rs_launch.py  rs_launch.xml
ROS/rs_package/rs_package/: skid_steer.py  twist_plus_separation.py
cameras/: camera1.sh  camera2.sh
install/: local_setup.sh  setup.sh
install/RS_Package/share/RS_Package/: controller_turtle.launch.py  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh  ps3.config.yaml
install/RS_Package/share/RS_Package/cmake/: RS_PackageConfig.cmake
install/rs_package/share/rs_package/: controller_turtle.launch.py  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
(+1 files in other folders)
