<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Que_Package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!--Replace XXXXX with the type of msg from the "/human_input" topic-->
  <!--<depend>XXXXX</depend>-->
  <!--Replace YYYYY with the type of msg from the "/autonomy_input" topic-->
  <!--<depend>YYYYY</depend>-->
  <!--Replace ZZZZZ with the desired msg type of "/desired_movement" topic-->
  <!--<depend>ZZZZZ</depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
