<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rs_package</name>
  <version>0.0.1</version>
  <description>The RS (or Remote Station) Package takes input from a user and parses them into the ROS dataflow.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>
  
  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>teleop_twist_joy</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Test dependencies -->
  <test_depend>turtlesim</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>